Priority fix inputs out of range (warnings happen with negative num inputs
Numbers that are too large or too small for the input range now get fixed to max/min values

--- a/src/css/item.css
+++ b/src/css/item.css
@@ -90,15 +90,20 @@
 .priority {
     display: flex;
     flex-direction: row;
-    /* justify-content: start;
-    align-items: center; */
+    justify-content: start;
+    align-items: center;
     gap: 5px;
+
 
     label {
         padding: var(--padding-input);
+        border: none;
+        border-radius: 5px;
     }
     input[type=number] {
+        width: min-content;
         font-weight: bold;
+        font-size: 1rem;
     }
 }
 
